--- a/sites/all/themes/alhx/css/mobile.css
+++ b/sites/all/themes/alhx/css/mobile.css
@@ -1,3 +1,7 @@
+h1 {
+  font-size: 1.5em;
+}
+
 .header {
   width: 100%;
   height: auto;
@@ -5,6 +9,14 @@
   z-index: 100;
   line-height: 1.5em !important;
   position: static;
+}
+
+.overlay {
+  display: none !important;
+}
+
+.underlay {
+  clip: auto !important;
 }
 
 .headerBar {
@@ -58,14 +70,34 @@
   margin: 0em;
 }
 
+#page {
+  padding-top: 110px;
+}
+
+.headerFixed {
+  margin: 0;
+  left: 0;
+  padding: 0 1.5em;
+  box-sizing: border-box;
+  width: 100%;
+  display: inline-block;
+}
+
+.headerFixed h2.stickyHeaders {
+  margin-top: .5em !important;
+}
+
 .splashSub {
-  margin-top: 120px;
   position: relative;
   height: 30% !important;
   overflow: hidden;
 }
 
+.footerContactIcons {
+  display: block;
+}
+
 footer {
   padding: 0 !important;
-  margin: 0 !important;
+  margin: 2em 1em 1em 1em !important;
 }
