Updated icon fonts

--- a/sites/all/themes/alhx/css/ksocial.css
+++ b/sites/all/themes/alhx/css/ksocial.css
@@ -27,7 +27,7 @@ Instead of a list of all class selectors,
 you can use the generic selector below, but it's slower:
 [class*="icon-"] {
 */
-.icon-zoom-in, .icon-zoom-out, .icon-envelop, .icon-location, .icon-facebook, .icon-flickr, .icon-vimeo, .icon-google-plus, .icon-feed, .icon-twitter, .icon-tumblr, .icon-share, .icon-pinterest, .icon-search, .icon-checkmark, .icon-close, .icon-spam, .icon-phone, .icon-heart, .icon-youtube, .icon-printer, .icon-print, .icon-arrow-left, .icon-arrow-down, .icon-arrow-up, .icon-arrow-right, .icon-comment, .icon-user, .icon-export, .icon-book, .icon-cart, .icon-quill, .icon-warning, .icon-help, .icon-UL, .icon-keyed, .icon-fire-rated, .icon-egress {
+.icon-zoom-in, .icon-zoom-out, .icon-envelop, .icon-location, .icon-facebook, .icon-flickr, .icon-vimeo, .icon-google-plus, .icon-feed, .icon-twitter, .icon-tumblr, .icon-share, .icon-pinterest, .icon-search, .icon-checkmark, .icon-close, .icon-spam, .icon-phone, .icon-heart, .icon-youtube, .icon-printer, .icon-print, .icon-arrow-left, .icon-arrow-down, .icon-arrow-up, .icon-arrow-right, .icon-comment, .icon-user, .icon-export, .icon-book, .icon-cart, .icon-quill, .icon-warning, .icon-help, .icon-list, .icon-UL, .icon-keyed, .icon-fire-rated, .icon-egress, .icon-usd {
 	font-family: 'icons';
 	speak: none;
 	font-style: normal;
@@ -37,6 +37,7 @@ you can use the generic selector below, but it's slower:
 	line-height: 1;
 	-webkit-font-smoothing: antialiased;
 }
+
 .icon-zoom-in:before {
 	content: "\21";
 }
@@ -150,4 +151,7 @@ you can use the generic selector below, but it's slower:
 }
 .icon-egress:before {
 	content: "\41";
+}
+.icon-usd:before {
+	content: "\42";
 }
